--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,9 +11,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
+        compile project(':siriwaveview')
+        compile project(':react-native-siri-wave-view')
+        compile fileTree(dir: "libs", include: ["*.jar"])
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,6 +34,7 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url "https://maven.google.com" }
     }
 }
 
