--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 
 dependencies {
     compile project(':react-native-siri-wave-view')
+    compile project(':siriwaveview')
+    compile fileTree(dir: "libs", include: ["*.jar"])
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
