--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-siri-wave-view": "0.0.9"
+    "react-native-siri-wave-view": "0.0.9",
+    "react-native-sound-player": "^0.5.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
