--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-video')
     compile project(':react-native-sound-player')
     compile project(':react-native-siri-wave-view')
     compile project(':siriwaveview')
