--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-siri-wave-view": "0.0.9",
-    "react-native-sound-player": "^0.5.3"
+    "react-native-video": "^4.2.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
