--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-button": "^2.3.0",
     "react-native-siri-wave-view": "0.0.9",
     "react-native-video": "^4.2.0"
   },
