--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-native": "0.57.8",
     "react-native-button": "^2.3.0",
     "react-native-siri-wave-view": "0.0.9",
-    "react-native-video": "^4.2.0"
+    "react-native-sound-player": "^0.5.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
