--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-button": "^2.3.0",
+    "react-native-linear-gradient": "^2.5.3",
     "react-native-siri-wave-view": "0.0.9",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-sound-player": "^0.5.3"
   },
   "devDependencies": {
