--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.57.8",
     "react-native-button": "^2.3.0",
     "react-native-siri-wave-view": "0.0.9",
-    "react-native-sound": "^0.10.9"
+    "react-native-sound": "^0.10.9",
+    "react-native-sound-player": "^0.5.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
