--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,7 +95,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.firstpitch"
@@ -137,18 +137,20 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-sound-player')
-    compile project(':react-native-siri-wave-view')
-    compile project(':siriwaveview')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-sound-player')
+    implementation project(':react-native-siri-wave-view')
+    implementation project(':siriwaveview')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
-// puts all compile dependencies into folder libs for BUCK to use
+// puts all implementation dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
+    from configurations.implementation
     into 'libs'
+
 }
