--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-siri-wave-view": "0.0.9",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-sound-player": "^0.5.3",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "react-navigation-props-mapper": "^0.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
