--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-svg')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-sound-player')
     implementation project(':react-native-siri-wave-view')
