--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-native-siri-wave-view": "0.0.9",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-sound-player": "^0.5.3",
+    "react-native-svg": "^8.0.10",
+    "react-native-waveview": "^1.1.0",
     "react-navigation": "^3.0.9",
     "react-navigation-props-mapper": "^0.3.0"
   },
