--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android-dev": "adb -s ce061716b0ee48900d reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "formik": "^1.4.1",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-button": "^2.3.0",
