--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-button": "^2.3.0",
+    "react-native-device-screen-switcher": "^0.1.0",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-multiple-select": "^0.4.4",
